[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-code-review"
version = "1.0.0"
description = "An OpenEnv environment for automated code review tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn>=0.29.0,<1.0.0",
  "pydantic>=2.7.1,<3.0.0",
  "openai>=2.7.2",
  "python-dotenv>=1.0.1,<2.0.0",
  "requests>=2.32.3,<3.0.0",
  "openenv-core>=0.2.3",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["app*", "server*"]
